them trang donate

--- a/volunteer.html
+++ b/volunteer.html
@@ -13,21 +13,10 @@
         <div class="container">
             <h1 class="fade-in">🐾 Tình nguyện viên – Cùng chúng tôi thay đổi cuộc đời các bé thú cưng 🐾</h1>
             <p class="fade-in-delay-1">Gia nhập đội ngũ tình nguyện viên đầy yêu thương của chúng tôi — nơi mỗi hành động nhỏ đều góp phần tạo nên cơ hội sống mới cho những bé chó, mèo bị bỏ rơi. Dù bạn yêu thích chụp ảnh, chăm sóc, hay giúp cập nhật thông tin online — chúng tôi có vị trí dành cho bạn!</p>
-            <p class="website fade-in-delay-2">hanoipetadoption.com</p>
+            <p class="website fade-in-delay-2">fourpaws.com</p>
         </div>
     </section>
 
-    <!-- WEATHER COMPONENT -->
-    <section class="weather-section">
-        <div class="weather-container">
-            <div id="weatherComponent">
-                <div class="loading">
-                    <div class="spinner"></div>
-                    <p>Đang tải thông tin thời tiết...</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="section section-alt">
         <div class="container">
@@ -162,30 +151,30 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-icon">💬</div>
-                        <h3 class="card-title">TNV Phỏng vấn tìm chủ nhân nhận nuôi</h3>
+                        <div class="card-icon">🥰</div>
+                        <h3 class="card-title">TNV Tương tác và "xoa dịu" tâm lý</h3>
                     </div>
                     <div class="card-body">
                         <p class="card-description">
-                            Phỏng vấn người muốn nhận nuôi và giúp các bé tìm được gia đình phù hợp nhất. Vai trò quan trọng để đảm bảo các bé có tương lai tốt đẹp!
+                            Giúp những con vật từng bị bỏ rơi hoặc ngược đãi vượt qua nỗi sợ hãi, giúp chúng làm quen lại với hơi ấm con người để tăng khả năng được nhận nuôi thành công.
                         </p>
                         <div class="card-section">
-                            <div class="card-section-title">Trách nhiệm:</div>
+                            <div class="card-section-title">Nhiệm vụ:</div>
                             <ul class="card-list">
-                                <li>Liên hệ và phỏng vấn người có nhu cầu nhận nuôi</li>
-                                <li>Đánh giá điều kiện và khả năng chăm sóc</li>
-                                <li>Tư vấn về cách chăm sóc phù hợp</li>
-                                <li>Ghép cặp giữa người nhận nuôi và các bé</li>
-                                <li>Theo dõi sau nhận nuôi</li>
+                                <li>Ngồi cùng, vuốt ve và trò chuyện để các bé quen hơi người</li>
+                                <li>Sử dụng đồ chơi để giải tỏa căng thẳng và tăng sự năng động</li>
+                                <li>Dùng bánh thưởng để dạy các hành vi tốt và lệnh cơ bản</li>
+                                <li>Theo dõi biểu hiện để phân loại bé nhát hay dạn dĩ</li>
+                                <li>Giúp các bé làm quen với tiếng động và môi trường xung quanh</li>
                             </ul>
                         </div>
                         <div class="card-section">
                             <div class="card-section-title">Yêu cầu:</div>
                             <ul class="card-list">
-                                <li>Kỹ năng giao tiếp tốt</li>
-                                <li>Thái độ ôn hòa, thân thiện</li>
-                                <li>Có kinh nghiệm chăm sóc thú cưng</li>
-                                <li>Khả năng đánh giá và ra quyết định khách quan</li>
+                                <li>Tuyệt đối không nóng nảy hay ép buộc vật nuôi</li>
+                                <li>Hiểu ngôn ngữ thú cưng</li>
+                                <li>Tuân thủ lịch trình để tạo thói quen ổn định cho vật nuôi</li>
+                                <li>Đã tiêm phòng dại và không dị ứng lông chó mèo</li>
                             </ul>
                         </div>
                     </div>
@@ -231,7 +220,7 @@
             <p style="color: #fff; font-size: 1.2em; margin-bottom: 30px;">
                 Hãy gia nhập đội ngũ tình nguyện viên của chúng tôi ngay hôm nay!
             </p>
-            <a href="mailto:contact@hanoipetadoption.com" class="cta-button">Tham gia ngay!</a>
+            <a href="#contact-section" class="cta-button">Cách thức tham gia</a>
         </div>
     </section>
 
@@ -247,7 +236,9 @@
             <div class="testimonial-container">
                 <div class="testimonial-track">
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="activity-image-container">
+                            <img src="images/tinhnguyenvien1.jpg" alt="Chăm sóc cún 1" class="activity-image">
+                        </div>
                         <div class="quote-icon">❝</div>
                         <p class="testimonial-text">
                             "Làm việc với đội ngũ này thật tuyệt! Mọi người đều thân thiện, nhiệt tình và thực sự yêu động vật. Môi trường làm việc rất tích cực!"
@@ -262,7 +253,9 @@
                     </div>
 
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="activity-image-container">
+                            <img src="images/tinhnguyenvien2.jpg" alt="Chăm sóc cún 2" class="activity-image">
+                        </div>
                         <div class="quote-icon">❝</div>
                         <p class="testimonial-text">
                             "Tôi bắt đầu là tình nguyện viên chụp ảnh cách đây 6 tháng. Thật tuyệt vời khi thấy những bức ảnh của mình giúp các bé tìm được gia đình mới!"
@@ -277,7 +270,9 @@
                     </div>
 
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="activity-image-container">
+                            <img src="images/tinhnguyenvien3.webp" alt="Chăm sóc cún 3" class="activity-image">
+                        </div>
                         <div class="quote-icon">❝</div>
                         <p class="testimonial-text">
                             "Ban đầu tôi lo lắng về chi phí nhưng hoàn toàn không bắt buộc đóng góp gì cả. Nếu muốn hỗ trợ thêm thì được chào đón, nhưng không áp lực chút nào!"
@@ -292,7 +287,9 @@
                     </div>
 
                      <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="activity-image-container">
+                            <img src="images/tinhnguyenvien4.jpg" alt="Chăm sóc cún 4" class="activity-image">
+                        </div>
                         <div class="quote-icon">❝</div>
                         <p class="testimonial-text">
                             "Quy trình đăng ký rất đơn giản! Chỉ cần gửi email và họ phản hồi trong 2 ngày. Mọi thứ được giải thích rất rõ ràng và chi tiết."
@@ -308,7 +305,9 @@
 
 
                     <div class="testimonial-card">
-                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <div class="activity-image-container">
+                            <img src="images/tinhnguyenvien5.png" alt="Chăm sóc cún 5" class="activity-image">
+                        </div>
                         <div class="quote-icon">❝</div>
                         <p class="testimonial-text">
                             "Foster một bé mèo con là trải nghiệm tuyệt vời nhất của tôi. Ban đầu bé rất sợ người, nhưng sau 2 tháng, bé đã trở nên thân thiện và vui vẻ!"
@@ -331,18 +330,19 @@
     </div>
 </section>
 
-    <section class="contact-section">
+    <section class="contact-section" id="contact-section">
         <div class="container">
-            <h2 class="section-title">📞 Thông tin liên hệ & FAQ 📞</h2>
+            <h2 class="section-title">📞 Liên hệ để trở thành Tình nguyện viên 📞</h2>
             
             <div class="contact-grid">
                 <div class="contact-info">
                     <h3 style="color: #FFB6C1; margin-bottom: 20px; font-size: 1.5em;">Liên hệ với chúng tôi</h3>
+                    <p class="contact-instruction"> Nếu bạn muốn trở thành <b>Tình nguyện viên của FourPaws</b> hãy liên hệ với chúng tôi để trao đổi thêm:</p>
                     <div class="contact-item">
                         <span class="contact-icon">📧</span>
                         <div>
                             <strong>Email:</strong><br>
-                            contact@hanoipetadoption.com
+                            contact@fourpaws.com
                         </div>
                     </div>
                     <div class="contact-item">
@@ -363,7 +363,7 @@
                         <span class="contact-icon">🌐</span>
                         <div>
                             <strong>Website:</strong><br>
-                            hanoipetadoption.com
+                            fourpaws.com
                         </div>
                     </div>
                 </div>
@@ -395,7 +395,15 @@
             </div>
         </div>
     </section>
-
+    <!--Link den ủng hộ-->
+    <section class="ready-to-help">
+        <div class="container">
+            <div class="help-content">
+                <h2 class="help-title">Bạn Đã Sẵn Sàng Giúp Đỡ?</h2>
+                <a href="donate.html" class="help-button">ỦNG HỘ NGAY</a>
+            </div>
+        </div>
+    </section>
     <!-- Pet Effects Elements -->
     <div class="floating-pets">
         <div class="floating-pet" style="left: 10%; animation-delay: 0s;">🐕</div>
@@ -407,7 +415,6 @@
 
     <!-- Scripts -->
     <script src="scripts/volunteer.js"></script>
-    <script src="scripts/weather.js"></script>
     <script src="scripts/pet-effects.js"></script>
 </body>
 </html>     
