--- a/danhmuc.html
+++ b/danhmuc.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Nhận nuôi</title>
-    <link rel="stylesheet" href="danhmuc.css">
+    <link rel="stylesheet" href="assets/css/danhmuc.css">
 </head>
 <body>
     <div class="banner reveal">
