--- a/login.html
+++ b/login.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>PetHome - Đăng nhập / Đăng ký</title>
+    <title>FOURPAWS - Đăng nhập / Đăng ký</title>
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&family=Noto+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -180,7 +185,7 @@
                   >
                 </div>
                 <span class="text-xl font-bold tracking-tight text-gray-900"
-                  >PetHome</span
+                  >FOURPAWS</span
                 >
               </a>
             </div>
@@ -359,7 +364,7 @@
                     Tạo tài khoản mới ✨
                   </h2>
                   <p class="text-gray-600 text-sm mt-2">
-                    Gia nhập cộng đồng PetHome ngay hôm nay.
+                    Gia nhập cộng đồng FOURPAWS ngay hôm nay.
                   </p>
                 </div>
                 <div
