--- a/detail-product.html
+++ b/detail-product.html
@@ -143,7 +143,7 @@
 
         {
           id: 3,
-          name: "assets/picture/webp/ghim cài áo bằng bông hình mèo đen chó đen",
+          name: "ghim cài áo bằng bông hình mèo đen chó đen",
           category: "Quà lưu niệm",
           price: 23,
           categoryText: "Quà lưu niệm",
@@ -156,7 +156,7 @@
             "assets/picture/webp/ghim 2.webp",
             "assets/picture/webp/ghim 3.webp",
           ],
-          desc: "assets/picture/webp/ghim cài áo (pin) nhồi bông mềm mại, tạo hình thú cưng phong cách tối giản.",
+          desc: "ghim cài áo (pin) nhồi bông mềm mại, tạo hình thú cưng phong cách tối giản.",
           longDesc:
             "Sản phẩm được khâu tay tỉ mỉ, mặt sau có kim cài chắc chắn. Phù hợp cài lên áo khoác, mũ hoặc túi vải.",
           features: [
@@ -167,7 +167,7 @@
           tabInfo:
             "Kích thước khoảng 5x5cm, vải nhung bông cassets/picture/webp/ao cấp.",
           tabReviews:
-            '"assets/picture/webp/ghim cài lên túi vải nhìn xinh cực kỳ luôn." – Ngọc A. ★★★★☆',
+            '"ghim cài lên túi vải nhìn xinh cực kỳ luôn." – Ngọc A. ★★★★☆',
           tabCare: "Nếu bẩn hãy giặt nhẹ bằng tay, tránh dùng bàn chải cứng.",
           classes: {
             page: "product-page dog-theme",
@@ -434,7 +434,7 @@
           // Thêm sự kiện click cho cả ô sản phẩm
           card.style.cursor = "pointer";
           card.onclick = () => {
-            window.location.href = `Chi tiết sản phẩm.html?id=${item.id}`;
+            window.location.href = `detail-product.html?id=${item.id}`;
           };
 
           card.innerHTML = `
