lan cuoi that ne

--- a/index.html
+++ b/index.html
@@ -528,11 +528,13 @@
                   +20
                 </div>
               </div>
-              <button
-                class="h-12 px-8 rounded-full border border-primary text-primary-hover font-bold hover:bg-primary hover:text-white transition-colors"
+              <a href="volunteer.html">
+                <button
+                  class="h-12 px-8 rounded-full border border-primary text-primary-hover font-bold hover:bg-primary hover:text-white transition-colors"
+                >
+                  Xem chi tiết
+                </button></a
               >
-                Xem chi tiết
-              </button>
             </div>
           </div>
         </section>
